--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -3,8 +3,9 @@
   margin: 0 auto;
 
   @media screen and (min-width: 320px) {
-    width: 320px;
+    max-width: 280px;
     padding: 20px;
+    display: block;
   }
 
   @media screen and (min-width: 768px) {
