--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   border: 1px solid white;
-  width: 450px;
+  min-width: 250px;
   margin: 0 auto;
   align-items: center;
 }
