--- a/src/components/InputField/InputField.module.css
+++ b/src/components/InputField/InputField.module.css
@@ -1,8 +1,8 @@
 .form {
   padding: 15px;
-  display: flex;
+  display: block;
   flex-direction: column;
-  width: 450px;
+  width: 100%;
   margin: 0 auto;
   align-items: center;
 }
@@ -15,14 +15,16 @@
   text-align: center;
   align-items: center;
   margin: 0 auto;
-
+  width: 100%;
   @media screen and (min-width: 768px) {
     max-width: 393px;
   }
+  @media screen and (min-width: 320px) {
+    max-width: 250px;
+  }
 }
 .search__field {
-  display: block;
-  width: 100%;
+  display: flex;
   height: 30px;
   margin: 0 auto;
   padding: 10px;
@@ -35,11 +37,30 @@
   appearance: none;
   outline: none;
   color: #4a4252;
-  width: 400px;
   text-align: center;
   margin-bottom: 20px;
 
   @media screen and (min-width: 768px) {
     width: 336px;
+  }
+}
+.container {
+  width: 100%;
+  margin: 0 auto;
+
+  @media screen and (min-width: 320px) {
+    max-width: 280px;
+    padding: 20px;
+    display: block;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 648px;
+    padding: 60px 15px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 912px;
+    padding: 60px 15px;
   }
 }
