--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -17,7 +17,7 @@
 @media screen and (min-width: 480px) {
   .gallery__list {
     display: flex;
-    padding-inline-start: 40px;
+    /* padding-inline-start: 40px; */
     justify-content: center;
     align-items: center;
     margin-top: -10px;
@@ -29,5 +29,28 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    display: flex;
+    margin: 0 auto;
+  }
+}
+.container {
+  width: 100%;
+  margin: 0 auto;
+
+  @media screen and (min-width: 320px) {
+    max-width: 280px;
+    padding: 20px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 648px;
+    padding: 30px 15px;
+  }
+
+  @media screen and (min-width: 1024px) {
+    width: 912px;
+    padding: 30px 15px;
   }
 }
