--- a/src/components/ListItem/ListItem.module.css
+++ b/src/components/ListItem/ListItem.module.css
@@ -1,10 +1,9 @@
 .img {
   width: 100%;
   height: auto;
-  display: block;
+  display: inline-block;
 }
 .gallery__list__elem {
-  padding: 5px;
   margin-top: 20px;
   border-radius: 5px;
   margin-right: 20px;
@@ -12,7 +11,7 @@
   width: 300px;
   align-items: center;
   justify-self: center;
-  border: 2px solid black;
+  border: 1px solid black;
 
   @media screen and (min-width: 1024px) {
     flex-basis: calc(100% / 4 - 30px);
@@ -35,11 +34,10 @@
 
 .gallery__list__elem :hover,
 :focus {
-  width: unset;
   height: unset;
 }
 .img__thumb {
-  display: block;
+  display: inline-block;
   width: 300px;
   height: auto;
   align-items: center;
@@ -61,8 +59,6 @@
   text-transform: uppercase;
 }
 .button :focus {
-  width: unset;
-  height: unset;
   color: #0f0f0f;
   transform: scale(0.99);
   background-color: #0c1bec;
